# todo-ai

./: .gitignore  .luarc.json  .mcp.json  AGENTS.md  CLAUDE.md  INSTALL.md  Makefile  README.md  claude_code_nvim.md  dev-setup.sh  install.sh  requirements.txt  run_tests.lua  test-plugin.sh  test.py  test_config.lua  test_cursor_preservation.lua  test_debug_command.lua  test_hanging_fix.lua  test_header_display.lua  test_hunk_positions.lua  test_multiline.lua  test_scanner.lua  test_search_replace.lua  test_simple_virt.vim  test_simplified_format.lua  test_virt_lines_placement.lua  test_workflow_simulation.lua
.claude-plugin/: plugin.json
docs/: PROVIDER_API.md  TROUBLESHOOTING.md  unified_prompt_architecture.md
extension/: neovim.ts
ftdetect/: todoai-chat.vim
ftplugin/: todoai-chat.vim
hooks/: hooks.json  inject-context.sh  post-edit.sh  test.sh
mcp-server/: nvim.js  package.json  server.js  test.js
plugin/: todo-ai.vim
python/: cache.py  context.py  response_parser.py  server.py
rules/: neovim-workflow.md
rust/: Cargo.toml
rust/prompts/: examples.md  project_scan_instructions.md  search_replace_rules.md  system.md  todo_instructions.md
rust/src/: chat_store.rs  config.rs  context.rs  http.rs  logger.rs  main.rs  parser.rs  prompt.rs  protocol.rs  provider.rs  retry.rs  rpc.rs  scanner.rs  schema.rs  search_replace.rs  validator.rs
rust/src/providers/: claude.rs  claude_cli.rs  mod.rs  ollama.rs  openai.rs
scripts/: find_dead_code.sh  generate_docs.lua
syntax/: todoai-chat.vim
test/: example.js  parser_test.lua  schema_test.lua  (+2 more)
(+108 files in other folders)
