[package]
name = "todo-ai-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo-ai-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ureq = { version = "3", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
