[package]
name = "todo-ai-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo-ai-backend"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "net"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"
async-trait = "0.1"
